Release v2.1.13 - final UI corrections